
===========
Changes log  
===========

@version-full@ (@release-date@)
[Bugs fixed]
 - Fixed bug with the uri parsing in the DirectoryResource class. The query part of the resource uri
   is removed before sending request to the file connector.
 
[API changes]
 - Added ReferenceList.getWebRepresentation() method, using exsiting logic from Directory.
 - Deprecated Directory.getDirectoryVariants() method and added getIndexVariants() + 
   getIndexRepresentation() method to follow recent refactoring in Resource.

[Enhancements] 
 - The content negotiation algorithm is now more flexible about languages. It will try
   to satisfy the client languages preferences, but will always return a representation
   if the media type is accepted, even if the language is not explicitely accepted. 

1.0 RC2 (2007-01-09)
[Bugs fixed]
 - Fixed minor bug with the URI parsing (query sign "?" inside fragment). 
   Contributed by Thierry Boileau.
 - Fixed bug in the dynamic invocation of custom handle*() methods in the Handler class.
 - Fixed bug with the directory listing generation in the method "getVariants" of class DirectoryResource. 
   Contributed by Sean Landis.

[API changes]
 - Added an XmlRepresentation, super class of DomRepresentation and SaxRepresentation
   that faciliates the evaluation of XPath expressions and manages a context namespaces.
 - Added Message.getEntityAsSax() and getEntityAsDom() methods.
 - Added org.restlet.util.NodeSet that facilitates the iteration over a DOM NodeList.
 - Split Representation class into a new Variant class (containing all metadata 
   properties) and into a lighter Representation class. Variant is a subclass of 
   Resource and Representation a subclass of Variant. Zero impact on existing code.
 - Changed getVariants() to return a List<Variant> instead of a List<Representation>. 
   Suggested by Sumit Lohia.
 - Added getRepresentation(Variant variant) : Representation return the full representation 